# django-store-service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini
.github/workflows/: django.yml
accounts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_user_type.py
cabinet/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
cabinet/migrations/: 0001_initial.py
cabinet/services/: fastapi_service.py
catalog/: admin.py  context_processors.py  forms.py  models.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templatetags/: breadcrumbs.py
catalog/tests/: test_basic.py  test_breadcrumbs.py  test_pagination.py
core/: celery.py  logging.py  settings.py  urls.py
src/catalog/: admin.py  models.py  urls.py  views.py
src/core/: settings.py  urls.py
src/templates/: base.html
src/users/: admin.py  forms.py  models.py  urls.py  views.py
static/css/: catalog.css  style.css
static/js/: main.js
staticfiles/: base.html
templates/: base.html
templates/accounts/: celery_stats.html  forgot_password.html  login.html  password_reset_confirm.html  password_reset_request.html  referral_register.html  register.html  registration_info.html  task_result_detail.html  task_results.html  verify_email.html
templates/cabinet/: admin_api.html  admin_panel.html  dashboard.html  monthly_reports.html  settings.html  structure.html
templates/catalog/: catalog.html  index.html  (+2 more)
tests/: conftest.py  factories.py
(+31 files in other folders)
